[package]
name = "minsweeper-native-client"
version = "0.1.0"
edition = "2024"

[dependencies]
minsweeper-rs = "1.1.1"
iced = { version = "0.14.0", features = ["svg"] }
iced_core = "0.14.0"
iced_aw = { version = "0.13.0", features = ["menu"] }
derive_more = { version = "2.1.1", features = ["from"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"