[package]
name = "minsweeper-native-client"
version = "0.4.2"
edition = "2024"

description = "GUI for minsweeper-rs"

readme = "README.md"
repository = "https://github.com/Canary-Prism/minsweeper-native-client"
license = "Apache-2.0"

[dependencies]
minsweeper-rs = { version = "2.0.2", features = ["async", "tokio"] }
iced = { version = "0.14.0", features = ["svg", "tokio"] }
iced_core = "0.14.0"
iced_aw = { version = "0.13.0", features = ["menu"] }
iced_dialog = "0.14.0"
derive_more = { version = "2.1.1", features = ["from"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"
tokio = { version = "1.49.0", features = ["sync", "time"] }
futures-util = "0.3.31"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
formatx = "0.2.4"